--- a/bnb/bnbs/static/css/styles.css
+++ b/bnb/bnbs/static/css/styles.css
@@ -5,10 +5,10 @@ body {
   height: 100%;
   color: #3B3333;
   background-color: #fffcff;
-  /* background-image: url("bg.jpg"); */
+  background-image: url(../images/bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: bottom right;
   background-attachment: fixed;
   overflow-x: hidden;
   font-size: 0.9em;
@@ -172,43 +172,23 @@ h1 {
   user-select: none;
 }
 
-.btn {
+.btn, .btn:visited {
   background-color: #AD8686;
   border: none;
   width: 15%;
 }
-.btn:hover, .btn:active, .btn:visited {
+.btn:hover, .btn:active, .btn:focus {
   background-color: #756363;
-  border: none;
+  background-color: #756363;
+  outline: 0px !important;
+  -webkit-appearance: none;
+  box-shadow: none !important;
 }
 
 .checkbox label:after {
   content: "";
   display: table;
   clear: both;
-}
-
-.checkbox .cr {
-  position: relative;
-  display: inline-block;
-  border: 1px solid #a9a9a9;
-  border-radius: 0.25em;
-  width: 1.3em;
-  height: 1.3em;
-  float: left;
-  margin-right: 0.5em;
-}
-
-.checkbox .cr .cr-icon {
-  position: absolute;
-  font-size: 0.8em;
-  line-height: 0;
-  top: 50%;
-  left: 15%;
-}
-
-.checkbox label input[type=checkbox] {
-  display: none;
 }
 
 /* sourceMappingURL=styles.css.map */
