--- a/bnb/bnbs/templates/bnbs/index.html
+++ b/bnb/bnbs/templates/bnbs/index.html
@@ -34,21 +34,22 @@
       </div>
       <div class="col-4" style="text-align: center">
 
+
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="entire_place" value="entire_place">
+            <input class="form-check-input" type="checkbox" id="entire_place" value="ENT">
             <label class="form-check-label" for="inlineCheckbox1">Entire place</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="private_room" value="private_room">
+            <input class="form-check-input" type="checkbox" id="private_room" value="PRR">
             <label class="form-check-label" for="inlineCheckbox2">Private room</label>
           </div>
           <br>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="hotel_room" value="hotel_room">
+            <input class="form-check-input" type="checkbox" id="hotel_room" value="HTR">
             <label class="form-check-label" for="inlineCheckbox1">Hotel room</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="shared_room" value="shared_room">
+            <input class="form-check-input" type="checkbox" id="shared_room" value="SHR">
             <label class="form-check-label" for="inlineCheckbox2">Shared room</label>
           </div>
 
