finished alle databases

--- a/bnb/bnbs/static/css/styles.css
+++ b/bnb/bnbs/static/css/styles.css
@@ -160,22 +160,10 @@ h1 {
   color: #05240d;
 }
 
-.container {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
 .btn, .btn:visited {
   background-color: #AD8686;
   border: none;
-  width: 15%;
+  width: 30%;
 }
 .btn:hover, .btn:active, .btn:focus {
   background-color: #756363;
@@ -191,6 +179,69 @@ h1 {
   clear: both;
 }
 
+/* Form with suggested facility */
+/*
+ {
+    box-sizing: border-box;
+  }
+
+  body {
+    font: 16px Arial;  
+  }
+
+//   the container must be positioned relative:
+  .autocomplete {
+    position: relative;
+    display: inline-block;
+  }
+
+  input {
+    border: 1px solid transparent;
+    background-color: #f1f1f1;
+    padding: 10px;
+    font-size: 16px;
+  }
+
+  input[type=text] {
+    background-color: #f1f1f1;
+    width: 100%;
+  }
+
+  input[type=submit] {
+    background-color: DodgerBlue;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    // position the autocomplete items to be the same width as the container:
+    top: 100%;
+    left: 0;
+    right: 0;
+  }
+
+  .autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff; 
+    border-bottom: 1px solid #d4d4d4; 
+  }
+
+//   when hovering an item:
+  .autocomplete-items div:hover {
+    background-color: #e9e9e9; 
+  }
+
+//   when navigating through the items using the arrow keys:
+  .autocomplete-active {
+    background-color: DodgerBlue !important; 
+    color: #ffffff; 
+  } */
 /* sourceMappingURL=styles.css.map */
 
 /*# sourceMappingURL=styles.css.map */
