--- a/bnb/bnbs/templates/layout_index.html
+++ b/bnb/bnbs/templates/layout_index.html
@@ -18,7 +18,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg bg-transparent">
-      <a class="navbar-brand" href="#"><img class= "resize" src="static/images/logo.png"></a>
+      <a class="navbar-brand" href="/"><img class= "resize" src="static/images/logo.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,16 +31,27 @@
       </div>
     </nav>
   <div class="container">
-    {% block body %}
-    {% endblock %}
+
+    <div class="row">
+      <div class="col">
+        <p><h1>
+        {% block header %}
+
+        {% endblock %}
+        </h1></p>
+      </div>
+    <div class="row">
+      <div class="col"></div>
+      <div class="col-8">
+      {% block body %}
+      {% endblock %}
+    </div>
+      <div class="col"></div>
+    </div>
+      
 
   </div>
 
-  <div class="container" style="text-align: center;">
-          <p><br>
-        <button type="button" class="btn btn-primary btn-lg">Search</button>
-      </p>
-  </div> 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
