--- a/bnb/bnbs/templates/layout_index.html
+++ b/bnb/bnbs/templates/layout_index.html
@@ -40,13 +40,14 @@
         {% endblock %}
         </h1></p>
       </div>
+    </div>
     <div class="row">
-      <div class="col"></div>
-      <div class="col-8">
+      <div class="col-sm-1"></div>
+      <div class="col-xl">
       {% block body %}
       {% endblock %}
     </div>
-      <div class="col"></div>
+      <div class="col-sm-1"></div>
     </div>
       
 
