--- a/bnb/bnbs/static/css/styles.css
+++ b/bnb/bnbs/static/css/styles.css
@@ -87,16 +87,34 @@ input[type=submit]:hover {
   }
 }
 
-.form-control-sm, .form-select-sm {
+.form-control-sm {
   border: none;
   background-color: #f7eded;
-  width: 70%;
+  text-align: center;
+  color: #756363;
+  display: inline-block;
+}
+
+.form-control {
+  display: inline-block;
+}
+
+.form-select {
+  border: none;
+  width: auto;
+  background-color: #f7eded;
+  display: inline-block;
   text-align: center;
   color: #756363;
 }
+.form-select:hover, .form-select:active, .form-select:focus {
+  outline: 0px !important;
+  -webkit-appearance: none;
+  box-shadow: none !important;
+}
 
 .range {
-  width: auto;
+  width: fit-content;
 }
 
 .slider {
@@ -105,7 +123,6 @@ input[type=submit]:hover {
   appearance: none;
   color: #74AD84;
   width: 100%;
-  /* Full-width */
   height: 7px;
   /* Specified height */
   background: #74AD84;
@@ -163,9 +180,8 @@ h1 {
 .btn, .btn:visited {
   background-color: #AD8686;
   border: none;
-  width: 30%;
 }
-.btn:hover, .btn:active, .btn:focus {
+.btn:hover, .btn:active, .btn:focus, .btn:checked {
   background-color: #756363;
   background-color: #756363;
   outline: 0px !important;
@@ -173,10 +189,26 @@ h1 {
   box-shadow: none !important;
 }
 
-.checkbox label:after {
-  content: "";
-  display: table;
-  clear: both;
+.btn-lg {
+  width: 30%;
+}
+
+.btn-sm {
+  background-color: #AD8686;
+  border: none;
+  color: #fffcff;
+  margin: 3px;
+}
+.btn-sm:visited {
+  background-color: #74AD84;
+}
+.btn-sm:hover, .btn-sm:active, .btn-sm:focus, .btn-sm:checked {
+  background-color: #756363;
+  background-color: #756363;
+}
+
+.checks_group {
+  margin: 3px;
 }
 
 /* Form with suggested facility */
