--- a/bnb/bnbs/static/css/styles.scss
+++ b/bnb/bnbs/static/css/styles.scss
@@ -109,24 +109,38 @@ h3 {
 .form-control-sm {
     border: none;
     background-color: $light-2;
-    width: 70%;
     text-align: center;
     color: $accent-3;
+    display: inline-block;
+}
+.form-control {
+  display: inline-block;
 }
 
-.form-select-sm {
-    @extend .form-control-sm;
-}
+.form-select {
+  border: none;
+  width: auto;
+  background-color: $light-2;
+  display: inline-block;
+  text-align: center;
+  color: $accent-3;
+  &:hover, &:active, &:focus {
+    outline:0px !important;
+    -webkit-appearance:none;
+    box-shadow: none !important;
+  }
   
+}
+
 .range {
-    width: auto;
+  width: fit-content;
 }
 
 .slider {
     -webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
     color: $accent-1;
-    width: 100%; /* Full-width */
+    width: 100%;
     height: 7px; /* Specified height */
     background: $accent-1;
     outline: none; /* Remove outline */
@@ -169,14 +183,14 @@ h1 {
   
 
   
-.btn{
+.btn {
     background-color: $accent-2;
     border: none;
-    width: 30%;
+    // width: 30%;
     &:visited {
         @extend .btn;
     }
-    &:hover, &:active, &:focus {
+    &:hover, &:active, &:focus, &:checked {
         background-color: $accent-3;
         background-color: $accent-3;
         outline:0px !important;
@@ -184,15 +198,29 @@ h1 {
         box-shadow: none !important;
     }
 }
+.btn-lg {
+  width: 30%;
+}
 
-
-
-.checkbox label:after {
-    content: '';
-    display: table;
-    clear: both;
+.btn-sm {
+  background-color: $accent-2;
+  border: none;
+  color: $background-color; 
+  margin: 3px;
+  &:visited {
+    background-color: $accent-1;
   }
-  
+  &:hover, &:active, &:focus, &:checked {
+      background-color: $accent-3;
+      background-color: $accent-3;
+
+  }
+
+}
+
+.checks_group {
+    margin: 3px;
+}
 
 /* Form with suggested facility */
 
