--- a/bnb/bnbs/templates/bnbs/index.html
+++ b/bnb/bnbs/templates/bnbs/index.html
@@ -14,13 +14,12 @@ Find the perfect Airbnb
 
 
 
-<!-- Price -->
 
 <div class="form-group">
 
     <form name="test" method="GET" action="{% url 'results' %}">
       {% csrf_token %}
-      <table>
+      <table width="100%">
         <tr>
           <td style="padding: 10px" class="center">Price</th>
           <td class="center">Type of place</th>
@@ -29,18 +28,40 @@ Find the perfect Airbnb
         </tr>
       
       <tr>  
-      <td>
-          <input type="range" value="60" min="1" max="800" style = "margin-top: 25px" oninput="this.nextElementSibling.value = this.value" class="slider" name="price">
-          €<output>75</output>      
+      <td class="center" style="padding: 10px">
+          <input type="range" value="75" min="1" max="800" style = "margin-top: 25px" oninput="this.nextElementSibling.value = this.value" class="slider" name="price">
+          €<output>75</output>     
       </td>
 
       <td style="padding: 10px" class="center">
-        <input class="form-control" type="text" name="room_type">
+        <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic checkbox toggle button group">
+          <div class="checks_group">
+          <input type="checkbox" class="btn-check" name="Entire home/apt" id="Entire home/apt" autocomplete="off" value="Entire home/apt">
+          <label class="btn btn-outline-secondary btn-sm" for="Entire home/apt" >Entire home/apt</label>
+        
+          <input type="checkbox" class="btn-check" name="Hotel room" id="Hotel room" autocomplete="off">
+          <label class="btn btn-outline-secondary btn-sm" for="Hotel room">Hotel room</label>
+        </div>
+          <div class="checks_group">
+          <input type="checkbox" class="btn-check" name="Private room" id="Private room" autocomplete="off">
+          <label class="btn btn-outline-secondary btn-sm" for="Private room">Private room</label>
+
+          <input type="checkbox" class="btn-check" name="Shared room" id="Shared room" autocomplete="off">
+          <label class="btn btn-outline-secondary btn-sm" for="Shared room">Shared room</label>
+        </div>
+        </div>
+
+
         
       </td>
 
     <td style="padding: 10px" class="center">
-      <input class="form-control" type="text" name="accommodates">
+      <select class="form-select" aria-label=".form-select example" name="accommodates">
+        <option selected value="1">Number of guests</option>
+        {% for i in num_of_acc %}
+        <option value="{{ i }}" style="text-align:left">{{ i }}</option>
+        {% endfor %}
+      </select>
     </td>
     <td style="padding: 10px" class="center">
       <input class="form-control" type="text" name="near">
@@ -48,29 +69,13 @@ Find the perfect Airbnb
 
     </tr>
     <tr>
-      <td colspan="4" class="center"  style="padding: 10px"><button class="btn btn-primary btn-lg" type="submit" name="action" >Search</button></td>
+      <td colspan="5" class="center"  style="padding: 10px"><button class="btn btn-primary btn-lg" type="submit" name="action" >Search</button></td>
     </tr>
     </table>
     </form> 
 
 </div>
 
-
-
-
-
-        
-
-
-<!-- <div class="row" style="padding: 30px">
-  <div class="col"></div>
-    <button type="button" class="btn btn-primary btn-lg" type="submit" name="action">Search</button>
-  <div class="col"></div>
-</div> -->
-
-
-
-<!-- </div> -->
 
 
 {% endblock %}
