--- a/bnb/bnbs/static/css/styles.css
+++ b/bnb/bnbs/static/css/styles.css
@@ -211,69 +211,32 @@ h1 {
   margin: 3px;
 }
 
-/* Form with suggested facility */
-/*
- {
-    box-sizing: border-box;
-  }
+table {
+  table-layout: fixed;
+  width: 100%;
+}
 
-  body {
-    font: 16px Arial;  
-  }
+.cell {
+  width: 200px;
+  height: 200px;
+  text-align: center;
+}
 
-//   the container must be positioned relative:
-  .autocomplete {
-    position: relative;
-    display: inline-block;
-  }
+.result_img {
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+  border-radius: 10px;
+}
 
-  input {
-    border: 1px solid transparent;
-    background-color: #f1f1f1;
-    padding: 10px;
-    font-size: 16px;
-  }
-
-  input[type=text] {
-    background-color: #f1f1f1;
-    width: 100%;
-  }
-
-  input[type=submit] {
-    background-color: DodgerBlue;
-    color: #fff;
-    cursor: pointer;
-  }
-
-  .autocomplete-items {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    border-bottom: none;
-    border-top: none;
-    z-index: 99;
-    // position the autocomplete items to be the same width as the container:
-    top: 100%;
-    left: 0;
-    right: 0;
-  }
-
-  .autocomplete-items div {
-    padding: 10px;
-    cursor: pointer;
-    background-color: #fff; 
-    border-bottom: 1px solid #d4d4d4; 
-  }
-
-//   when hovering an item:
-  .autocomplete-items div:hover {
-    background-color: #e9e9e9; 
-  }
-
-//   when navigating through the items using the arrow keys:
-  .autocomplete-active {
-    background-color: DodgerBlue !important; 
-    color: #ffffff; 
-  } */
-/* sourceMappingURL=styles.css.map */
+.descr {
+  text-decoration: none;
+  text-overflow: ellipsis;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 250px;
+  height: 19px;
+}
 
 /*# sourceMappingURL=styles.css.map */
