--- a/bnb/bnbs/static/css/styles.css
+++ b/bnb/bnbs/static/css/styles.css
@@ -33,6 +33,7 @@ body {
 
 a {
   color: #3B3333;
+  text-decoration: none;
 }
 a:hover {
   color: #74AD84;
@@ -117,7 +118,7 @@ input[type=submit]:hover {
   width: fit-content;
 }
 
-.slider {
+.slider, .slider2 {
   -webkit-appearance: none;
   /* Override default CSS styles */
   appearance: none;
@@ -134,13 +135,13 @@ input[type=submit]:hover {
   /* 0.2 seconds transition on hover */
   transition: opacity 0.2s;
 }
-.slider:hover {
+.slider:hover, .slider2:hover {
   color: #74AD84;
   opacity: 0.9;
   /* Fully shown on mouse-over */
   text-decoration: none;
 }
-.slider::-webkit-slider-thumb {
+.slider::-webkit-slider-thumb, .slider2::-webkit-slider-thumb {
   -webkit-appearance: none;
   /* Override default look */
   appearance: none;
@@ -155,7 +156,7 @@ input[type=submit]:hover {
   cursor: pointer;
   /* Cursor on hover */
 }
-.slider::-moz-range-thumb {
+.slider::-moz-range-thumb, .slider2::-moz-range-thumb {
   width: 20px;
   /* Set a specific slider handle width */
   height: 20px;
@@ -166,6 +167,62 @@ input[type=submit]:hover {
   /* Green background */
   cursor: pointer;
   /* Cursor on hover */
+}
+
+.slider, .slider2 {
+  -webkit-appearance: none;
+  /* Override default CSS styles */
+  appearance: none;
+  color: #74AD84;
+  width: 100%;
+  height: 7px;
+  /* Specified height */
+  background: #74AD84;
+  outline: none;
+  /* Remove outline */
+  opacity: 0.7;
+  /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: 0.2s;
+  /* 0.2 seconds transition on hover */
+  transition: opacity 0.2s;
+}
+.slider:hover, .slider2:hover {
+  color: #74AD84;
+  opacity: 0.9;
+  /* Fully shown on mouse-over */
+  text-decoration: none;
+}
+.slider::-webkit-slider-thumb, .slider2::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  /* Override default look */
+  appearance: none;
+  opacity: 1;
+  width: 20px;
+  /* Set a specific slider handle width */
+  height: 20px;
+  /* Slider handle height */
+  border-radius: 50%;
+  background: #74AD84;
+  /* Green background */
+  cursor: pointer;
+  /* Cursor on hover */
+}
+.slider::-moz-range-thumb, .slider2::-moz-range-thumb {
+  width: 20px;
+  /* Set a specific slider handle width */
+  height: 20px;
+  /* Slider handle height */
+  border-radius: 50%;
+  opacity: 1;
+  background: #74AD84;
+  /* Green background */
+  cursor: pointer;
+  /* Cursor on hover */
+}
+
+.slider2 {
+  height: 0px;
+  margin-top: -10px;
 }
 
 h1 {
@@ -217,16 +274,16 @@ table {
 }
 
 .cell {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 220px;
   text-align: center;
 }
 
 .result_img {
-  width: 150px;
+  width: 220px;
   height: 150px;
   display: inline-block;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .descr {
