--- a/bnb/bnbs/static/css/styles.scss
+++ b/bnb/bnbs/static/css/styles.scss
@@ -50,6 +50,7 @@ body {
   
 a {
     color: $text;
+    text-decoration: none;
     &:hover {
         color: $accent-1;
         text-decoration: none;
@@ -172,6 +173,47 @@ h3 {
     }
 }
 
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    color: $accent-1;
+    width: 100%;
+    height: 7px; /* Specified height */
+    background: $accent-1;
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+    &:hover {
+        color: $accent-1;
+        opacity: 0.9; /* Fully shown on mouse-over */
+        text-decoration: none;
+    }
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none; /* Override default look */
+        appearance: none;
+        opacity: 1;
+        width: 20px; /* Set a specific slider handle width */
+        height: 20px; /* Slider handle height */
+        border-radius: 50%;
+        background: $accent-1; /* Green background */
+        cursor: pointer; /* Cursor on hover */
+    }
+    &::-moz-range-thumb {
+        width: 20px; /* Set a specific slider handle width */
+        height: 20px; /* Slider handle height */
+        border-radius: 50%;
+        opacity: 1;
+        background: $accent-1; /* Green background */
+        cursor: pointer; /* Cursor on hover */
+    }
+}
+.slider2 {
+  @extend .slider;
+  height: 0px;
+  margin-top:-10px;
+}
+
 h1 {
     font-size: 2.5em;
     text-align: center;
@@ -228,16 +270,16 @@ table {
 }
 
 .cell {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 220px;
   text-align: center;
 }
 
 .result_img {
-  width: 150px;
+  width: 220px;
   height: 150px;
   display: inline-block;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 
@@ -250,3 +292,4 @@ table {
   width: 250px; 
   height: 19px;
 }
+
