--- a/bnb/bnbs/templates/bnbs/index.html
+++ b/bnb/bnbs/templates/bnbs/index.html
@@ -67,7 +67,7 @@ Find the perfect Airbnb
     <td style="padding: 10px" class="center" width="25%">
       <select class="form-select" aria-label=".form-select example" name="facility" style="max-width: 200px">
         <option selected value="1">Facility</option>
-        <option value="Museums and galleries" disabled><>Museums and galleries</b></option>
+        <option value="Museums and galleries" disabled>Museums and galleries</b></option>
         {% for each in art %}
         <option value="{{ each.pk }} MUSEUM" style="text-align:left">{{ each.name }}</option>
         {% endfor %}
@@ -75,9 +75,7 @@ Find the perfect Airbnb
         {% for each in shop %}
         <option value="{{ each.pk }} SHOP" style="text-align:left">{{ each.name }}</option>
         {% endfor %}
-        <!-- {% for each in facilities %}
-        <option value="{{ each }}" style="text-align:left">{{ each.name }}</option>
-        {% endfor %} -->
+
       </select>
     </td>
 
