--- a/bnb/bnbs/templates/bnbs/bnb.html
+++ b/bnb/bnbs/templates/bnbs/bnb.html
@@ -1,87 +1,20 @@
-<!-- Layla Hoogeveen, Web App Studio -->
+<!-- Layla Hoogeveen,
+    Information Organization, October 2021 -->
 
-{% extends "layout_index.html" %}
+{% extends "layout_accommodation.html" %}
 
 {% block title %}
-    AirBnBest
+    AirBnBest: {{ name }}
+{% endblock %}
+
+{% block header %}
+  {{ bnb.name }}
+{% endblock %}
+
+{% block more_filters %}
+    test
 {% endblock %}
 
 {% block body %}
-<div class="row">
-  <div class="col"></div>
-  <div class="col-8">
-    <p><h1>Find the perfect Airbnb</h1></p><p></p><br>
-    <div class="row">
-      <div class="col">
-        <center>Price</center><br>
-      </div>
-      <div class="col-4">
-        <center>Type of place</center>
-      </div>
-      <div class="col">
-        <center>Facilities</center>
-      </div>
-      <div class="col">
-        <center>Neighbourhood</center>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="range" style="text-align: center;">
-          <input type="range" value="60" min="1" max="500" oninput="this.nextElementSibling.value = this.value" class="slider">
-          €<output>75</output>
-        </div>
-      </div>
-      <div class="col-4" style="text-align: center">
-        {% for each in room_types %}
-         <!-- ifchanged zodat je niet 16.000 keer Hotel room etc. hebt staan distinct() in Django werkt niet goed helaas -->
-          <!-- {% ifchanged each.room_type %} -->
-          {{ each.room_type }}
-          <!-- {% endifchanged %} -->
-        {% endfor %}
-
-<!-- 
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="entire_place" value="ENT">
-            <label class="form-check-label" for="inlineCheckbox1">Entire place</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="private_room" value="PRR">
-            <label class="form-check-label" for="inlineCheckbox2">Private room</label>
-          </div>
-          <br>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="hotel_room" value="HTR">
-            <label class="form-check-label" for="inlineCheckbox1">Hotel room</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="shared_room" value="SHR">
-            <label class="form-check-label" for="inlineCheckbox2">Shared room</label>
-          </div> -->
-
-        </div>
-        <div class="col">
-          <div class="mb-3">
-            <center>
-            <input type="checkin" class="form-control-sm" id="exampleFormControlInput1" placeholder="dd/mm/yy">
-          </center>
-          </div>
-        </div>
-        <div class="col">
-            <center>
-              <select class="form-select-sm" aria-label="Default select example">
-                <option selected>De Pijp</option>
-                <option value="Centrum">Centrum</option>
-                <option value="Zuid">Zuid</option>
-                <option value="Zuidoost">Zuidoost</option>
-              </select>
-            </center>
-        </div>                            
-  </div>
-  </div>
-  <div class="col"></div>
-
-
-  </div>
-</div>
+  test
 {% endblock %}
